# EmbodiedAI-Demo-Pipeline

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  run.py
configs/: README.md  base.yaml
configs/distributed/: cluster120_2node.yaml  cluster120_2node_ib.yaml  cluster120_2node_rdma.yaml  cluster120_single.yaml  scut_gpu11_single.yaml  template_2node_ssh.yaml
configs/launch/: aliases.yaml
data/: README.md
demo_chains/: fastwam_realrobot_v0.yaml  lerobot_fastwam_data_to_inference_v0.yaml
docker/: Dockerfile.cuda118  Dockerfile.cuda128  container-paths.txt  embodied-ai-paths.sh  entrypoint.sh
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  BOOTSTRAP.md  CLUSTER_ARTIFACTS_RUNBOOK.md  DEMO_COVERAGE_ROADMAP.md  DISTRIBUTED_TRAINING.md  ENVIRONMENT.md  FASTWAM_REALROBOT_INTEGRATION.md  IMAGEWAM_INTEGRATION.md  IMPLEMENTATION_STATUS.md  LEROBOT_FIRST_PIPELINE.md  LEROBOT_MULTI_MODEL_PLAN.md  LEROBOT_REPLICATION.md  MASTER_PLAN.md  MODEL_ARTIFACTS.md  OPEN_DATA_AND_EVAL_PLAN.md  PROJECT_STRUCTURE.md  README.md  REFERENCE_BASELINE.md  STORAGE_AND_ARTIFACTS.md  TRAINING_AND_INFERENCE.md
experiments/: README.md
models/: README.md
pipelines/: README.md
references/: README.md  dataset_registry.yaml  model_registry.yaml  upstreams.yaml  xpolicylab_baseline.yaml
requirements/: constraints-py311.txt
scripts/: README.md  check_assets.py  doctor.sh
tasks/: registry.yaml
tests/: test_cli.py  test_config.py  test_contracts.py  test_demo_runner.py  test_fastwam_report.py  test_fastwam_scripts.py  test_lerobot_scripts.py  test_training_demo.py
(+149 files in other folders)
