[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-ai-demo-pipeline"
version = "0.1.0"
description = "LeRobot and custom WAM training/inference pipeline base"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EmbodiedAI Demo Pipeline Contributors" }]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
embodied-demo = "embodied_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
